# mywave-ai-team

./: .env.example  .gitignore  CODEOWNERS  Caddyfile  Caddyfile.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.molt.yml  docker-compose.ollama.yml  docker-compose.server-full.yml  docker-compose.server.yml  docker-compose.yml  requirements-minimal.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  canonical_bridge.py  gm_director.py  main.py
config/: policy.yaml  routing.yaml  telegram.yaml.example
deploy/: nginx-agm.mywavetreaning.ru.conf  nginx-agm.mywavewake.ru.conf
docker/: Dockerfile  docker-compose.yml
docs/: 00-README.md  01-MyWave-Project-Map.md  02-Operating-System-SOP.md  03-AGM-System-Prompt.md  04-Pipelines-Catalog.md  05-Agency-Agents-Bridge.md  06-Telegram-Gateway-Spec.md  07-QA-and-Security.md  08-End2End-Example.md  CANONICAL-RUNTIME.md  CANONICAL-SCENARIO-V1.md  CURSOR-RUNNER.md  DEPLOY-agm.mywavetreaning.ru.md  E2E_PROOF.md  GITHUB-HARDENING.md  MCP.md  NORTH_STAR_ARCHITECTURE.md  OWNER-DECISIONS.md  OWNER-PRODUCTION-CHECKLIST-V1.md  OWNER-SETUP-AND-SERVER.md  PROJECT-STATUS.md  RUNBOOK.md  SECURITY-SKILLS.md  SECURITY.md  USAGE_AUDIT.md
scripts/: backup_postgres.sh  clear_all_missions.py  deploy_agm_on_server.sh  dump_audit_proof.py  install_backup_cron.sh  (+12 more)
services/molt_http_service/: Dockerfile  README.md  __init__.py  agents_control.py  app.py  config.py  dependencies.py  idempotency.py  logging_structured.py  metrics.py  pyproject.toml  readiness.py  request_journal.py  routes.py  run.py
(+258 files in other folders)
